# LEMMA

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DAILY_PROGRESS_2026-01-25.md  DAILY_PROGRESS_2026-01-27.md  JEE (Advanced) 2025 Paper 2.txt  README.md  RULES.md  RulesDoc.md  WORK_REPORT_2026-01-25.md  cbse_extracted.txt
crates/mm-boink/: Cargo.toml  README.md
crates/mm-boink/src/: bank.rs  budget.rs  guardrail.rs  lib.rs  patterns.rs  supervisor.rs
crates/mm-brain/: Cargo.toml
crates/mm-brain/examples/: imo_benchmark.rs  integration_benchmark.rs  neural_imo_benchmark.rs
crates/mm-brain/src/: data.rs  encoder.rs  lib.rs  network.rs  onnx_inference.rs  policy.rs  substitution.rs  training.rs
crates/mm-core/: Cargo.toml
crates/mm-core/src/: canon.rs  error.rs  eval.rs  expr.rs  lib.rs  parse.rs  proof.rs  rational.rs  search.rs  symbol.rs
crates/mm-macro/: Cargo.toml
crates/mm-macro/src/: lib.rs
crates/mm-macro/tests/: basic.rs
crates/mm-rules/: Cargo.toml  DERIVATIVE_RULES_ANALYSIS.json
crates/mm-rules/src/: algebra.rs  backward.rs  board_exam.rs  calculus.rs  case_analysis.rs  combinatorics.rs  equations.rs  geometry.rs  guardrail.rs  induction.rs  inequalities.rs  inequality_chain.rs  integration.rs  lib.rs  number_theory.rs  patterns.rs  polynomial.rs  polynomials.rs  quantifier.rs  rule.rs  trig.rs
crates/mm-rules/src/algebra/: mod.rs
crates/mm-rules/src/geometry/: mod.rs
crates/mm-rules/src/number_theory/: mod.rs
crates/mm-search/: Cargo.toml
crates/mm-search/examples/: bidirectional_search_demo.rs  deep_mcts_bench.rs  deep_mcts_debug.rs  mcts_rule_explorer.rs
crates/mm-search/src/: beam.rs  boink_mcts.rs  bridge.rs  deep_mcts.rs  lib.rs  mcts.rs
crates/mm-solver/: Cargo.toml
crates/mm-solver/examples/: benchmark.rs  benchmark_advanced.rs  bidirectional_demo.rs  cbse_comprehensive.rs  cbse_math_test.rs  comprehensive_proof_demo.rs  debug_collect.rs  debug_deriv.rs  debug_eq.rs  debug_power.rs  debug_rules.rs  debug_steps.rs  demo.rs  derivative.rs  honest_capability_test.rs  imo_2024_benchmark.rs  imo_2024_official.rs  imo_2024_solve.rs  imo_integrated.rs  imo_solver.rs  imo_test.rs  neural_mcts.rs  neural_mcts_demo.rs  proof_solver_demo.rs  quick_test.rs  solve_quadratic.rs  stress_test.rs  test_chain_rule.rs  test_deriv_rules.rs  test_eq_solve.rs  test_new_rules.rs  test_trained_model.rs  test_training_patterns.rs  train_beast.rs  train_network.rs
crates/mm-solver/src/: imo_solver.rs  lib.rs  orchestrator.rs
crates/mm-solver/tests/: proof_suite.rs
crates/mm-synth/: Cargo.toml
crates/mm-synth/examples/: generate_data.rs
crates/mm-synth/src/: algebra.rs  functional.rs  generator.rs  lib.rs  number_theory.rs
crates/mm-verifier/: Cargo.toml
crates/mm-verifier/src/: lib.rs  numerical.rs  symbolic.rs
data/: annotated_problems.json  training_data_200.py  training_data_55.py
examples/: boink_demo.rs  jee_test.rs
notebooks/: colab_train_model.ipynb  kaggle_train_substitution_model.ipynb
scripts/: colab_train.py  download_imo_dataset.py  expand_dataset.py  filter_imo_problems.py  generate_1000_dataset.py  production_train.py  scrape_real_imo.py  train_colab_1m.py  train_colab_fixed.py  train_mathbert.py  train_on_synthetic.py  train_substitution_model.py  verified_imo_problems.py
