[package]
name = "mm-brain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Neural network strategy learning for Math Monster"

[dependencies]
mm-core = { path = "../mm-core" }
mm-rules = { path = "../mm-rules" }
rand.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
string-interner.workspace = true

# Neural network
candle-core.workspace = true
candle-nn.workspace = true

[dev-dependencies]
proptest.workspace = true
