[package]
name = "mm-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Search algorithms for LEMMA (Beam Search, MCTS)"

[dependencies]
mm-core = { path = "../mm-core" }
mm-rules = { path = "../mm-rules" }
mm-verifier = { path = "../mm-verifier" }
mm-brain = { path = "../mm-brain" }
rand.workspace = true
rand_chacha.workspace = true
thiserror.workspace = true
candle-core.workspace = true
rayon = "1.10"
num_cpus = "1.16"
