[package]
name = "mm-solver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Unified solver API for Math Monster"

[dependencies]
mm-core = { path = "../mm-core" }
mm-rules = { path = "../mm-rules" }
mm-verifier = { path = "../mm-verifier" }
mm-search = { path = "../mm-search" }
mm-brain = { path = "../mm-brain" }
mm-macro = { path = "../mm-macro" }
thiserror.workspace = true
candle-core.workspace = true
candle-nn.workspace = true

[[example]]
name = "solve_quadratic"
path = "examples/solve_quadratic.rs"

[[example]]
name = "derivative"
path = "examples/derivative.rs"

[[example]]
name = "debug_rules"
path = "examples/debug_rules.rs"

[[example]]
name = "train_network"
path = "examples/train_network.rs"

[[example]]
name = "neural_mcts"
path = "examples/neural_mcts.rs"

[[example]]
name = "test_new_rules"
path = "examples/test_new_rules.rs"

[[example]]
name = "train_beast"
path = "examples/train_beast.rs"

[[example]]
name = "neural_mcts_demo"
path = "examples/neural_mcts_demo.rs"

[[example]]
name = "imo_2024_official"
path = "examples/imo_2024_official.rs"

[[example]]
name = "imo_solver"
path = "examples/imo_solver.rs"

[[example]]
name = "imo_2024_solve"
path = "examples/imo_2024_solve.rs"

[[example]]
name = "bidirectional_demo"
path = "examples/bidirectional_demo.rs"

[[example]]
name = "comprehensive_proof_demo"
path = "examples/comprehensive_proof_demo.rs"

[[example]]
name = "proof_solver_demo"
path = "examples/proof_solver_demo.rs"

[[example]]
name = "honest_capability_test"
path = "examples/honest_capability_test.rs"

[[example]]
name = "cbse_math_test"
path = "examples/cbse_math_test.rs"