[package]
name = "mm-synth"
version = "0.1.0"
edition = "2021"
description = "Synthetic problem generator for LEMMA IMO solver"
license = "MPL-2.0"
authors = ["Pushp Kharat"]

[dependencies]
mm-core = { path = "../mm-core" }
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
